--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,20 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <lib.dir>${project.basedir}/lib</lib.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <log4j2.version>2.23.1</log4j2.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>bioviz</id>
+            <url>https://nexus.bioviz.org/repository/maven-releases/</url>
+        </repository>
+        <repository>
+            <id>ugent</id>
+            <url>https://genesis.ugent.be/maven2/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -25,209 +36,119 @@
             <version>2.5</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>BigWig</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>biojava-live</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>bytecode</artifactId>
-            <version>1.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>bytecode-tools</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>core</artifactId>
-            <version>1.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
+            <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
-            <version>2.5.0-4-gd683012-SNAPSHOT</version>
+            <version>3.0.5</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>Jama</artifactId>
+            <groupId>gov.nist.math</groupId>
+            <artifactId>jama</artifactId>
             <version>1.0.3</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>numericalMethods</artifactId>
-            <version>1.0</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j2.version}</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>RClient</artifactId>
-            <version>0.6.7</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
+            <groupId>org.rosuda.REngine</groupId>
+            <artifactId>REngine</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>colt</artifactId>
-            <version>1.2.0</version>
+            <groupId>org.rosuda.REngine</groupId>
+            <artifactId>Rserve</artifactId>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>xmlgraphics-commons</artifactId>
+            <version>2.9</version>
+        </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis-ext</artifactId>
+            <version>1.3.04</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-all</artifactId>
+            <version>1.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>fop</artifactId>
+            <version>2.9</version>
+        </dependency>
+        <dependency>
+            <groupId>colt</groupId>
+            <artifactId>colt</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
             <version>1.3.4</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>org.jfree</groupId>
             <artifactId>jcommon</artifactId>
-            <version>1.0.15</version>
+            <version>1.0.24</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.0.12</version>
+            <version>1.5.6</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>ca.umontreal.iro.simul</groupId>
+            <artifactId>ssj</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rwl</groupId>
             <artifactId>optimization</artifactId>
             <version>1.3</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>ssj</artifactId>
-            <version>3.3.1</version>
+            <groupId>org.broad.igv</groupId>
+            <artifactId>bigwig</artifactId>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-anim</artifactId>
-            <version>1.0</version>
+            <groupId>org.biojava</groupId>
+            <artifactId>core</artifactId>
+            <version>1.9.7</version>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-awt-util</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-bridge</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-codec</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-css</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-dom</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-ext</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-extension</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-gui-util</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-gvt</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-parser</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-script</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-svg-dom</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-svggen</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-swing</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-transcoder</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-util</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik-xml</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>batik</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.0.4</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>pdf-transcoder</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>xml-apis-ext</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>local</groupId>
-            <artifactId>xmlgraphics-commons</artifactId>
-            <version>1.5</version>
+            <groupId>org.biojava</groupId>
+            <artifactId>bytecode</artifactId>
+            <version>1.9.7</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
