--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.46.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>de.jstacs</groupId>
             <artifactId>jstacs-projects</artifactId>
             <version>2.5.0-SNAPSHOT</version>
