--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     <dependencies>
         <dependency>
             <groupId>de.jstacs</groupId>
-            <artifactId>jstacs</artifactId>
-            <version>2.5</version>
+            <artifactId>jstacs-projects</artifactId>
+            <version>2.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.samtools</groupId>
