--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>${log4j2.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.rosuda.REngine</groupId>
             <artifactId>REngine</artifactId>
             <version>2.1.0</version>
