--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
     <description>Command line interface for Annotale tools</description>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j2.version>2.23.1</log4j2.version>
     </properties>
