Create local equiv. of dep. from projects encodedream and gemoma

--- a/talen/pom.xml
+++ b/talen/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>talen</artifactId>
     <packaging>jar</packaging>
-    <name>AnnoTALE TALEN Compatibility</name>
+    <name>AnnoTALE TALEN</name>
 
     <dependencies>
         <dependency>
